# InternCodingPrompt

./: .dockerignore  .gitignore  Dockerfile  README.md  SUBMISSIONS.md  app.py  pyproject.toml
.github/workflows/: test.yml
api/: controllers.py  models.py  routes.py
intern_coding_prompt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_app.py
