[project]
name = "intern-coding-prompt"
version = "0.1.0"
description = "Flask to FastAPI migration project"
requires-python = ">=3.11"
dependencies = [
    "flask==3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
